--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.example.tusharacharya.knowweather">
 
     <application
+        android:name=".KWApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".KWApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.HomeActivity">
             <intent-filter>
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MyCitiesActivity"></activity>
     </application>
 
 </manifest>
