--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.example.tusharacharya.knowweather"
+        applicationId "com.tramsun.knowweather"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
