--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tusharacharya.knowweather">
+    package="com.tramsun.knowweather">
 
     <application
-        android:name=".KWApplication"
+        android:name="com.tramsun.knowweather.KWApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.HomeActivity">
+        <activity android:name="com.tramsun.knowweather.activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MyCitiesActivity"></activity>
+        <activity android:name="com.tramsun.knowweather.activity.MyCitiesActivity" />
     </application>
 
 </manifest>
