--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.tramsun.knowweather"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -22,48 +22,41 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-
+    compile 'com.android.support:appcompat-v7:26.1.0'
     //Android Design lib
-    compile 'com.android.support:design:24.2.1'
-
+    compile 'com.android.support:design:26.1.0'
     //Android Support lib
-    compile 'com.android.support:support-v4:24.2.1'
-
+    compile 'com.android.support:support-v4:26.1.0'
     //Timber
-    compile 'com.jakewharton.timber:timber:4.3.1'
-
+    compile 'com.jakewharton.timber:timber:4.5.1'
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile "com.squareup.retrofit2:converter-gson:2.1.0"
-    compile "com.squareup.retrofit2:adapter-rxjava:2.1.0"
-
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     //OkHttp
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile "com.squareup.okhttp3:logging-interceptor:3.4.1"
-
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-
     //Firebase
     compile 'com.google.firebase:firebase-core:9.6.0'
     compile 'com.google.firebase:firebase-database:9.6.0'
-
     //RXAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
-
     //RXJava
     compile 'io.reactivex:rxjava:1.2.0'
-
     compile 'com.google.android.gms:play-services-maps:9.6.0'
 }
 
